Añadido de Botones

--- a/index.html
+++ b/index.html
@@ -23,5 +23,11 @@
     <a href="https://github.com">
         <button class="boton-github">Ir a GitHub</button>
     </a>
+    <a href="https://git-scm.com/downloads/win"> 
+        <button class="boton-github">Descargar Git Para Windows</button>
+    </a>
+    <a href="https://git-scm.com/downloads/linux"> 
+        <button class="boton-github">Descargar Git Para Linux</button>
+    </a>
 </body>
 </html>
